spade-tests/src/snapshots/spade_tests__wordlength_inference__multiple_generics_ia.snap
---
source: spade-tests/src/wordlength_inference.rs
---
fn f<A, B>(a: int<a>, b: int<b>) -> int<b> {
  a + b
}

entity main(clk: clock, rst: bool) -> int<0> {
  let x: int<5> = f(0, 10);
  let y: int<5> = f(1, 10);
  0
}


error: Use of undeclared name b
  ┌─ testinput:1:41
  │
1 │ fn f<A, B>(a: int<a>, b: int<b>) -> int<b> {
  │                                         ^ Undeclared name


